<resources>
    <string name="app_name">Home Services Repair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_salon">NAME OF HOME SERVICE REPAIR</string>
    <string name="address_of_salon">ADDRESS OF HOME SERVICE REPAIR</string>
    <string name="phone_number">PHONENUMBER</string>
    <string name="haircut">HARDWARE REPAIRS</string>
    <string name="hairspa">ELECTRIC REPAIRS</string>
    <string name="haircolor">AC REPAIRS</string>
    <string name="massage">PLUMBER SERVICES</string>
    <string name="facial">HOME PAINT SERVICES</string>
    <string name="bleach">REFRIGERATIVE REPAIRS</string>
    <string name="choose_your_slot">CHOOSE YOUR SLOT</string>
    <string name="time1">9am-10am</string>
    <string name="time2">10am-11am</string>
    <string name="time3">11am-12pm</string>
    <string name="time4">12pm-1pm</string>
    <string name="time5">1pm-2pm</string>
    <string name="time6">2pm-3pm</string>
    <string name="time7">3pm-4pm</string>
    <string name="time8">4pm-5pm</string>
    <string name="time9">5pm-6pm</string>
    <string name="time10">6pm-7pm</string>
    <string name="time11">7pm-8pm</string>
    <string name="time12">8pm-9pm</string>
    <string name="time13">9am-10pm</string>
    <string name="book_now">BOOK NOW</string>
    <string name="services_which_you_provide">SERVICES WHICH YOU PROVIDE</string>
    <string name="next">NEXT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="name">NAME OF CUSTOMER/HOME SERVICE</string>
    <string name="city">CITY</string>
    <string name="address">(Home Service)address of home service</string>
    <string name="verify_as_customer">VERIFY AS CUSTOMER</string>
    <string name="verify_as_barber">VERIFY AS HOME SERVICE</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="log_out">LOGOUT</string>
    <string name="name_of_customer">Name of customer</string>
    <string name="services">Services</string>
    <string name="book_for_tomorrow">BOOK FOR TOMORROW</string>
    <string name="booked_history">BOOKED HISTORY</string>
    <string name="empty">  </string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="salon_name">Name</string>
    <string name="salon_address">Address</string>
    <string name="salon_phonenumber">Phone Number</string>
    <string name="available">Available</string>
    <string name="no">No Customer</string>
	
	

    <string name="title_activity_maps">UberAnimation</string>
    <string name="google_directions_key">AIzaSyDM3m-7KdPBV4wVCAD1cUS4lZOAUqefoQU</string>
    <string name="enter_source_place_text">Enter Source Place</string>
    <string name="enter_destination_place_text">Enter Destination Place</string>
    <string name="button_text">GO</string>
    <string name="empty_error">Fields cannot be empty</string>
    <string name="internet_error">No Internet Connection!!</string>
    <string name="enter_place_text">Enter Place</string>
    <string name="go_button_text">Track Now</string>
    <string name="driver_mode_text">Driver Mode</string>
    <string name="title_activity_driver_mode">Map</string>
	
	
</resources>
