<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:background="#b3e5fc"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:background="#b3e5fc"
            android:id="@+id/layoutOfSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/ic_image_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#b3e5fc"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/nameOfSalon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_salon"
                    android:textColor="@color/primaryText"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addressOfSalon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_of_salon"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/phonenumber_of_Salon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>